@@ -56,6 +56,7 @@ Version 1.13.10+dev:
    * Macro SCEPTRE_OF_FIRE_EFFECT damage increased to 15x4 so Sceptre is an
      improvement over the uncut ruby of fire (14x4) in TRoW.
  * Miscellaneous and bug fixes:
+   * Fixed crash after canceling add-on download (bug #2203)
    * Fixed ingame help showing units you haven't encountered (bug #2135)
    * Fixed the opacity IPF resetting to 0 if the value given was 100% or
      greater (bug #2185).
